# Computacao_Evolucionista

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/raw/weather/: BELO HORIZONTE (PAMPULHA)_MG.csv  BELO HORIZONTE - CERCADINHO_MG.csv  IBIRITE (ROLA MOCA)_MG.csv
legacy/: README.md
legacy/ce2/: README.md  mm.py
legacy/ce2/cec2017/: functions.py  simple.py
legacy/ce3/: README.md  main2.py
legacy/ce3-1/: README.md  main2.py
notebooks/: main_execution.ipynb
notebooks/legacy/: README.md  ex04_legacy_forecasting_notebook.ipynb  ex05_legacy_hpo_random_split.ipynb  ex05_legacy_hpo_random_split_copy.ipynb  ex05_legacy_hpo_temporal_holdout.ipynb  ex05_legacy_hpo_temporal_holdout_copy.ipynb  ex05_legacy_lstm_cpu_baseline.ipynb
src/ce/: __init__.py  cli.py
src/ce/analysis/: __init__.py  run_all.py
src/ce/common/: __init__.py  config.py  io.py  paths.py  seeds.py
src/ce/ex02_cec2017/: __init__.py  algorithms.py  benchmarks.py  problems.py  run.py
src/ce/ex03_tsp/: __init__.py  aco.py  data.py  ga.py  metrics.py  problem.py  run.py
src/ce/ex04_forecasting/: __init__.py  gp.py  (+6 more)
tests/: test_main_execution.py  test_smoke.py
tests/common/: test_checksums.py  test_paths.py
tests/ex02/: test_algorithms.py  test_benchmarks.py  test_smoke_run.py
tests/ex03/: test_aco.py  test_costs.py  test_route_validity.py  test_tsplib_parser.py
tests/ex04/: test_cpu_smoke_train.py  test_gp_smoke.py  test_target_column.py  test_temporal_split.py
tests/ex05/: test_hpo_smoke.py  test_search_space.py  test_time_series_cv.py
(+5 files in other folders)
